fixed scrollbar

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,5 +1,5 @@
 .button {
- width: 335px;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
