--- a/src/components/CardItem/CardItem.module.css
+++ b/src/components/CardItem/CardItem.module.css
@@ -3,7 +3,7 @@
   background: var(--secondary-bg-color);
   padding: 14px 18px 14px 24px;
   border-left: 4px solid rgba(255, 255, 255, 0.3);
-  max-width: 335px;
+  width: 335px;
   box-sizing: border-box;
 }
 
