--- a/src/components/CardTitle/CardTitle.module.css
+++ b/src/components/CardTitle/CardTitle.module.css
@@ -2,7 +2,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 335px;
   border-radius: 8px;
   background: hsl(0, 0%, 7%);
   padding: 18px 20px;
